--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 
     "test": "echo \"Error: no test specified\" && exit 1",
 
+
+
     "preinstall": "npm rebuild bcrypt --build-from-source"
+
 
 
   },
@@ -28,6 +31,10 @@
 
 
     "bcrypt": "^5.1.1",
+
+
+
+    "bcryptjs": "^3.0.2",
 
 
 
