--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 
 
 
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
 
 
 
-    "preinstall": "npm rebuild bcrypt --build-from-source"
+    
 
 
 
